--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">PottyTracker</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_rate_bathroom">RateBathroom</string>
+    <string name="title_activity_create_account">CreateAccount</string>
 </resources>
