--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="title_activity_update_bathroom">UpdateBathroom</string>
     <string name="title_activity_your_ratings">YourRatings</string>
     <string name="title_activity_splash_screen">SplashScreen</string>
+    <string name="facebook_app_id">264292963909609</string>
     <string name="title_activity_home_page">HomePage</string>
     <string name="empty_title"></string>
 
